Challenge 1- Challenge3 completion

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     </div>
 
     <!-- top games & other interesting stats -->
+     <!-- add a css rule -->
     <h2>Stats</h2>
-    <div class="stats-container">
+    
+    <flex-box class="stats-container">
+        
         <div class="stats-card">
             <h3>Individual Contributions</h3>
             <p id="num-contributions">
@@ -37,7 +40,7 @@
             <p id="num-games">
             </p>
         </div>
-    </div>
+    </flex-box>
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
             <h3>🥇 Top Funded Game</h3>
