--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
         <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        <input type="text" id="search-bar" placeholder="Search for a game..." />
+        <display-listitem id="search-results"></display-listitem>
     </div>
 
     <!-- background info about company -->
