adding homepage where user can sign in or sign up -- using superbase as database management

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <body>
     <!-- header row with logo -->
     <div class="header">
-        <img id="tentacles" src="assets/tentacles.png">
-        <h1 class="header-text">Sea Monster Crowdfunding</h1>
+         
+            <a class="header-link" href="homepage.html" >
+            <img id="tentacles" src="assets/tentacles.png">
+            <h1 class="header-text" >Sea Monster Crowdfunding</h1>
+            </a>
+         
         <input type="text" id="search-bar" placeholder="Search for a game..." />
         <display-listitem id="search-results"></display-listitem>
     </div>
