made some slight changes for my own steady work flow

--- a/index.html
+++ b/index.html
@@ -17,23 +17,20 @@
             <h1 class="header-text" >Sea Monster Crowdfunding</h1>
             </a>
 
-        <div class="container py-4 d-flex justify-content-center align-items-end" style="max-width: fit-content; margin-bottom: 10px; margin-top: 0; border: none;">
+        <div class="container py-4 d-flex justify-end align-items-end" style="max-width: fit-content; margin:10px 2em 0px auto; border: none;">
             <div class="searchbox" style="position: relative; width: 100%; display: flex; flex-direction: column; justify-content: flex-end;">
-            <input id="search-bar" class="form-control" style="margin: 0;" placeholder="Search for a game..." autocomplete="on" aria-expanded="false" aria-controls="search-menu" aria-haspopup="listbox">
-            <ul id="search-menu" role="listbox" style="background-color: wheat; z-index: 2000; position: absolute; top: 100%; left: 0; width: 100%; margin: 0;">
-            <li class="dropdown-item" role="option" style="display: block; background-color: inherit;" hidden>
+            <input id="search-bar" class="form-control" style="margin: 0;" placeholder="Search for a game..." autocomplete="on" aria-expanded="false" aria-controls="search-menu" aria-haspopup="listbox" value="zoo" type="text">
+            <ul id="search-menu" role="listbox" style="background-color: wheat; z-index: 2000; position: absolute; top: 100%; left: 0; width: 100%; margin: 0;" >
+            <li class="dropdown-item" role="option" style="display: block; background-color: inherit;"  >
             trial
             </li>
             <li class="dropdown-item" role="option" style="display: block;">
             adventure
             </li>
-            </ul>
+           
             </div>
-        </div>
-            </ul>
-            </div>
-        </div>
-    </div>
+        </div> 
+    </div> 
 
     <!-- background info about company -->
     <h2>Welcome to Sea Monster!</h2>
@@ -85,5 +82,6 @@
     </div>
 
     <script type="module" src="index.js"></script>
+     
   </body>
 </html>
