search function - now fully complete from my end

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="container py-4 d-flex justify-end align-items-end" style="max-width: fit-content; margin:10px 2em 0px auto; border: none;">
             <div class="searchbox" style="position: relative; width: 100%; display: flex; flex-direction: column; justify-content: flex-end;">
             <input id="search-bar" class="form-control" style="margin: 0;" placeholder="Search for a game..." autocomplete="on" aria-expanded="false" aria-controls="search-menu" aria-haspopup="listbox" value="zoo" type="text">
-            <ul id="search-menu" role="listbox" style="background-color: wheat; z-index: 2000; position: absolute; top: 100%; left: 0; width: 100%; margin: 0;" >
-            <li class="dropdown-item" role="option" style="display: block; background-color: inherit;"  >
+            <ul id="search-menu" role="listbox" style="background-color: whitesmoke; z-index: 2000; position: absolute; top: 100%; left: 0; width: 100%; margin: 0; padding:0px" hidden >
+            <li class="dropdown-item" role="button" style="display: block; background-color: inherit;"  >
             trial
             </li>
-            <li class="dropdown-item" role="option" style="display: block;">
+            <li class="dropdown-item" role="button" style="display: block;">
             adventure
             </li>
            
