major updates regarding user icon setup looking fantastic

--- a/homepage.html
+++ b/homepage.html
@@ -11,10 +11,11 @@
     <body>
     <!-- header row with logo -->
     <div class="header"> 
-        <a class="header-link" href="homepage.html">
+        <a class="header-link" href="index.html">
             <img id="tentacles" src="assets/tentacles.png">
             <h1 class="header-text" >Sea Monster Crowdfunding</h1>
             </a>
+         
             
     </div>
     <hr>
@@ -28,8 +29,8 @@
     <br>
     <h3 style= "vertical-align: top;  font-weight: bold; color:#bcf0ff;">Enter your username and password, to either sign up or sign in.</h3>
     <form id="signup-form">
-      <input name="email" type="email" placeholder="you@example.com" required>
-      <input name="password" type="password" placeholder="Create password" required minlength="8">
+      <input name="email" type="email" placeholder="you@example.com" autocomplete="on" required>
+      <input name="password" type="password" autocomplete="on" placeholder="Create password" required minlength="8">
       <br>
       <div class="button-group">
         <button id="signup-btn">Sign up</button>
