--- a/saved_games.html
+++ b/saved_games.html
@@ -27,8 +27,10 @@
                     <a href="saved_games.html" style="text-decoration: none; color: inherit;">
                     <li style="padding: 8px 16px; cursor: pointer;" >Saved Games</li>
                     </a>
+                    <a href="settings.html" style="text-decoration: none; color: inherit;">
                     <li style="padding: 8px 16px; cursor: pointer;">Preferences</li>
-                    <li style="padding: 8px 16px; cursor: pointer; background-color: red;text-shadow: #fff7f7 1px 1px 10px;">Logout</li>
+                    </a>
+                    <li id="signout-btn" style="padding: 8px 16px; cursor: pointer; background-color: red;text-shadow: #fff7f7 1px 1px 10px;">Logout</li>
                 </ul>
             </div>
             <script>
