--- a/saved_games.html
+++ b/saved_games.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
      
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="saved_games.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
