--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     </div>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
      
   </body>
 </html>
