ls minute updates

--- a/saved_games.html
+++ b/saved_games.html
@@ -87,29 +87,29 @@
 
 
 
-    <template id="game-card-template">
+    <template id="games-container">
       <article class="game-img-card">
-      <figure class="game-media">
-        <img class="game-img" src="" alt="">
-        <img class='save-icon' src="assets/bookmark.png" alt="Save icon" aria-hidden="true"/>
-      </figure>
-      <div class="game-card-body">
-        <h3 class="game-title"></h3>
-        <p class="game-desc"></p>
+        <figure class="game-media">
+          <img class="game-img" src="" alt="">
+          <img class='save-icon' src="assets/bookmark.png" alt="Save icon" aria-hidden="true"/>
+        </figure>
+        <div class="game-card-body">
+          <h3 class="game-title"></h3>
+          <p class="game-desc"></p>
 
-        <div class="game-progress-wrapper">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width:0%"></div>
-        </div>
-        <div class="game-stats">
-          <span class="pledged" title="Pledged"></span>
-          <span class="goal" title="Goal"></span>
-          <span class="backers" title="Backers"></span>
-        </div>
-        </div>
+          <div class="game-progress-wrapper">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width:0%"></div>
+          </div>
+          <div class="game-stats">
+            <span class="pledged" title="Pledged"></span>
+            <span class="goal" title="Goal"></span>
+            <span class="backers" title="Backers"></span>
+          </div>
+          </div>
 
-         
-      </div>
+          
+        </div>
       </article> 
     </template>
 
